SFOS-1445 release v3.16.008